--- a/componentes/Juegos.html
+++ b/componentes/Juegos.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse text-center" id="navbarNav">
             <ul class="navbar-nav mr-auto ml-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="../indice.html">Home</a>
+                    <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Cursos</a>
