--- a/componentes/profesionales.html
+++ b/componentes/profesionales.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>CoachingBy</title>
 </head>
 
 <body>
@@ -28,19 +28,19 @@
         <div class="collapse navbar-collapse text-center" id="navbarNav">
             <ul class="navbar-nav mr-auto ml-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="../indice.html">Home</a>
+                    <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Cursos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Profesionales</a>
+                    <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Juegos</a>
+                    <a class="nav-link" href="profesionales.html">Profesionales</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">Contacto</a>
+                    <a class="nav-link" href="Juegos.html">Juegos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="contacto.html">Contacto</a>
                 </li>
             </ul>
             <div class="d-flex flex-row">
@@ -54,67 +54,46 @@
         </div>
     </nav>
 
-    <div class="carrucel">
-        <div class="row row-cols-1 row-cols-md-2" >
-            <div class="row no-gutters">
-                <div class="col-md-6" style="max-width: 540px;">
-                    <img src="../img/hal.png" class="img-fluid" alt="...">
+    <div class="Profesionales">
+
+        <div class="row row-cols-1 row-cols-md-3">
+            <div class="col mb-4">
+              <div class="card h-100">
+                <img src="../img/hal.png" class="img-fluid" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
+              </div>
             </div>
-
-            <div class="row no-gutters">
-                <div class="col-md-6">
-                    <img src="../img/Lou.png"  class="img-fluid" alt="...">
+            <div class="col mb-4">
+              <div class="card h-100">
+                <img src="../img/Lou.png" class="img-fluid" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
+              </div>
             </div>
-
-            <div class="row no-gutters">
-                <div class="col-md-6">
-                    <img src="../img/Sweet.png" class="img-fluid" alt="...">
+            <div class="col mb-4">
+              <div class="card h-100">
+                <img src="../img/Sweet.png" class="img-fluid" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
                 </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
+              </div>
             </div>
-
-            <div class="row no-gutters">
-                <div class="col-md-6">
-                    <img src="../img/hal.png" class="img-fluid" alt="...">
+            <div class="col mb-4">
+              <div class="card h-100">
+                <img src="../img/Lou.png" class="img-fluid" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
+              </div>
             </div>
-
-
-
-        </div>
+          </div>
     </div>
 
 
