--- a/componentes/servicios.html
+++ b/componentes/servicios.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar sticky-top navbar-expand-md navbar-light  " style="background-color: #e3f2fd;">
         <a class="navbar-brand" href="#">
-            <img src="img/letra-c.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="../img/letra-c.png" width="30" height="30" class="d-inline-block align-top" alt="">
             Coaching By
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -27,20 +27,20 @@
         </button>
         <div class="collapse navbar-collapse text-center" id="navbarNav">
             <ul class="navbar-nav mr-auto ml-auto">
+                <li class="nav-item ">
+                    <a class="nav-link" href="../index.html">Home</a>
+                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="componentes/servicios.html">Servicios</a>
+                    <a class="nav-link" href="profesionales.html">Profesionales</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="componentes/profesionales.html">Profesionales</a>
+                    <a class="nav-link" href="Juegos.html">Juegos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="componentes/Juegos.html">Juegos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="componentes/contacto.html">Contacto</a>
+                    <a class="nav-link " href="contacto.html">Contacto</a>
                 </li>
             </ul>
             <div class="d-flex flex-row">
@@ -55,58 +55,12 @@
 
     </nav>
 
-    <div class="carrucel" id="carrucelid">
+    
 
-        <div id="carouselExampleCaptions" class="carousel " data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleCaptions" data-slide-to="0" style="background-color: red"
-                    class="active"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="1" style="background-color: red"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="2" style="background-color: red"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="3" style="background-color: red"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="4" style="background-color: red"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="5" style="background-color: red"></li>
-            </ol>
-            <div class="carousel-inner ">
-                <div class="carousel-item active">
-                    <img src="img/Apex.jpg" class="d-block card-img-top " alt="...">
 
-                </div>
-                <div class="carousel-item">
-                    <img src="img/CSGO.jpg" class="d-block img-fluid" alt="...">
 
-                </div>
-                <div class="carousel-item">
-                    <img src="img/Fortnite.jpg" class="d-block img-fluid" alt="...">
 
-                </div>
-                <div class="carousel-item">
-                    <img src="img/rocketleague.jpg" class="d-block img-fluid" alt="...">
 
-                </div>
-                <div class="carousel-item">
-                    <img src="img/RainbowSix.jpg" class="d-block img-fluid" alt="...">
-
-                </div>
-                <div class="carousel-item">
-                    <img src="img/Overwatch.jpg" class="d-block img-fluid" alt="...">
-
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions"
-                data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions"
-                data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </button>
-        </div>
-    </div>
-
-    </div>
 
 
     <!-- Footer -->
@@ -262,7 +216,7 @@
 
 
 </body>
-<script src="js/Animaciones.js"></script>
+
 
 
 
